log
Thu 20 Apr 2023 10:20:15 PM UTC: 
 tests:  1|8
total_score: 0/70
1d4e872
Thu 20 Apr 2023 10:25:46 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
a382c63
Thu 20 Apr 2023 10:26:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
07f1ba8
Thu 20 Apr 2023 10:29:23 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:9: error: too few arguments to function ‘is_equal’
   78 |     if (is_equal(tree->current->pair->key, key)){
      |         ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
7d2921c
Thu 20 Apr 2023 10:29:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a715fec
Thu 20 Apr 2023 10:38:28 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ca7e0a5
